--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -78,4 +78,14 @@
     </a>
   </li>
   {% endif %}
+  {% if site.luogu_userid %}
+  <li>
+    <a target="_blank" href="https://www.luogu.com/user/{{ site.luogu_userid }}">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa  fa-stack-1x fa-inverse">洛谷</i>
+      </span>
+    </a>
+  </li>
+  {% endif %}
 </ul>
