更新 sns-links.html

--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -80,10 +80,10 @@
   {% endif %}
   {% if site.luogu_userid %}
   <li>
-    <a target="_blank" href="https://www.luogu.com/user/{{ site.luogu_userid }}">
+    <a target="_blank" href="https://www.luogu.com.cn/user/{{ site.luogu_userid }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa  fa-stack-1x fa-inverse">洛谷</i>
+        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
       </span>
     </a>
   </li>
