--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -83,7 +83,7 @@
     <a target="_blank" href="https://www.luogu.com.cn/user/{{ site.luogu_userid }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+        <i class="fa fa-luogu fa-stack-1x fa-inverse"></i>
       </span>
     </a>
   </li>
