更新 sns-links.html

--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -83,7 +83,7 @@
     <a target="_blank" href="https://www.luogu.com.cn/user/{{ site.luogu_userid }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa  fa-stack-1x fa-inverse">Luogu</i>
+        <i class="fa  fa-stack-0.5x fa-inverse">洛谷</i>
       </span>
     </a>
   </li>
