--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,7 +50,8 @@ layout: default
                 
                 {% if site.changyan_comment %}
                 <!--PC和WAP自适应版-->
-                <div id="SOHUCS" sid= window.location.href ></div> 
+                var SourceID = 
+                <div id="SOHUCS" ></div> 
                 <script type="text/javascript"> 
                 (function(){ 
                 var appid = 'cyxyjWUbK'; 
