更新 mathjax_support.html

--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -11,6 +11,6 @@
     }
   });
   </script>
-<!-- <script type="text/javascript"
+<script type="text/javascript"
         src="https://s4.zstatic.net/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_SVG">
-</script> -->
+</script>
