--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -15,6 +15,8 @@
     }
   });
 </script>
+<script id="MathJax-script" async src="https://fastly.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<!-- 
 <script type="text/javascript"
         src="https://s4.zstatic.net/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_SVG">
-</script>
+</script> -->
