--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -17,5 +17,8 @@
 </script>
 <!-- <script id="MathJax-script" async src="https://cdn.jsdmirror.cn/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
 <script type="text/javascript" async
-  src="https://s4.zstatic.net/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+  src="https://cdn.jsdmirror.cn/npm/mathjax@2/MathJax.js?config=TeX-AMS_CHTML">
 </script>
+<!-- <script type="text/javascript" async
+  src="https://s4.zstatic.net/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+</script> -->
