更新 mathjax_support.html

--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -9,16 +9,17 @@
       scale: 90
     },
     tex2jax: {
-      inlineMath: [ ['$','$'] ],
+      inlineMath: [ ['$','$'] , ['\\(','\\)']],
       displayMath: [ ['$$','$$'] ],
       processEscapes: true,
     }
   });
 </script>
-<!-- <script id="MathJax-script" async src="https://cdn.jsdmirror.cn/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
-<script type="text/javascript" async
+<script id="MathJax-script" async src="https://s4.zstatic.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+<!-- <script type="text/javascript" async
   src="https://s4.zstatic.net/npm/mathjax@2/MathJax.js?config=TeX-AMS_CHTML">
-</script>
+</script> -->
 <!-- <script type="text/javascript" async
   src="https://s4.zstatic.net/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
 </script> -->
