--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -153,3 +153,8 @@ layout: default
 <!-- add support for mathjax by voleking-->
 {% include mathjax_support.html %}
 {% endif %}
+
+{% if site.keynote-katex %}
+<!-- add support for katex-->
+  {% include katex_support.html %}
+{% endif %}
