--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -189,3 +189,8 @@ layout: default
 <!-- add support for mathjax by voleking-->
   {% include mathjax_support.html %}
 {% endif %}
+
+{% if site.post-katex %}
+<!-- add support for katex-->
+  {% include katex_support.html %}
+{% endif %}
