--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,9 @@
 
 {% include head.html %}
 
+<!-- add support for katex-->
+{% include katex_support.html %}
+
 <!-- hack iOS CSS :active style -->
 <body ontouchstart="">
 
