--- a/project/html-music-player/css/player.css
+++ b/project/html-music-player/css/player.css
@@ -32,7 +32,7 @@ a:hover {
     text-decoration: underline;
 }
 .imageBg {
-    background: url(/img/2024/10/026.jpg) no-repeat center center fixed;
+    background: url(/img/2024/11/001.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
