--- a/_includes/katex_support.html
+++ b/_includes/katex_support.html
@@ -14,10 +14,8 @@
         {left: "$", right: "$", display: false}
         ],
         macros: {
-        "\\ge": "\\geqslant",
-        "\\le": "\\leqslant",
-        "\\geq": "\\geqslant",
-        "\\leq": "\\leqslant"
+        "\\geqslant": "\\geq",
+        "\\leqslant": "\\leq",
         }
     });
     });
