--- a/project/XPlayer/css/player.css
+++ b/project/XPlayer/css/player.css
@@ -172,3 +172,8 @@ a:hover {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #BCBCBC;
 }
+
+/* for mobile */
+/* #playlist_button{
+    display: none;
+} */
