--- a/project/XPlayer/css/player.css
+++ b/project/XPlayer/css/player.css
@@ -32,7 +32,7 @@ a:hover {
     text-decoration: underline;
 }
 .imageBg {
-    background: url(/img/2024/11/001.png) no-repeat center center fixed;
+    background: url(/project/XPlayer/img/bg.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -174,6 +174,14 @@ a:hover {
 }
 
 /* for mobile */
-/* #playlist_button{
-    display: none;
-} */
+#playlist_button{
+    text-align: center;
+    max-height: 7px;
+    max-width: 200px;
+    padding: 0px 20px 18px 20px;
+    position: absolute;
+    left: 5%;
+    z-index: 999;
+    background-color: #ffffff;
+    border-radius: 15px;
+} 
