--- a/project/XPlayer/css/audio.css
+++ b/project/XPlayer/css/audio.css
@@ -5,6 +5,13 @@
     height: 70px;
     border: 1px solid #e0e0e0;
     color: #3e3e3e;
+
+    position: fixed;
+    bottom: 5px;
+    opacity: 0.8;
+    left: 0;
+    right: 0;
+    z-index: 99;
 }
 
 .audio-left {
