--- a/project/XPlayer/css/player.css
+++ b/project/XPlayer/css/player.css
@@ -47,12 +47,12 @@ a:hover {
     margin: 0 auto;
 }
 #player {
-    position: fixed;
+    /* position: fixed;
     bottom: 5px;
     opacity: 0.6;
     left: 0;
     right: 0;
-    z-index: 99;
+    z-index: 999; */
 }
 #player:hover {
     opacity: 1;
