--- a/project/XPlayer/css/player.css
+++ b/project/XPlayer/css/player.css
@@ -47,12 +47,12 @@ a:hover {
     margin: 0 auto;
 }
 #player {
-    /* position: fixed;
+    position: fixed;
     bottom: 5px;
     opacity: 0.6;
     left: 0;
     right: 0;
-    z-index: 999; */
+    z-index: 999;
 }
 #player:hover {
     opacity: 1;
@@ -133,11 +133,11 @@ a:hover {
     color: #A6E22D;
 }
 /*hide the default audio controls when overflow, the 526px is the width of the controls in IE*/
-@media screen and (max-width: 526px) {
+/* @media screen and (max-width: 526px) {
     #player {
         display: none;
    }
-}
+} */
 
 /*for song info*/
 #songinfo_name{
@@ -175,13 +175,43 @@ a:hover {
 
 /* for mobile */
 #playlist_button{
+    display:block;
     text-align: center;
-    max-height: 7px;
+    max-height: 30px;
     max-width: 200px;
+    height: 30px;
+    font-size: 18px;
     padding: 0px 20px 18px 20px;
-    position: absolute;
-    left: 5%;
-    z-index: 999;
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 9999;
     background-color: #ffffff;
-    border-radius: 15px;
-} 
+    border-radius: 5px;
+	
+    -webkit-transition-duration: 0.8s; /* Safari */
+    transition-duration: 0.8s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+#playlist_button:after {
+    content: "";
+    background: #1493dd;
+    display: block;
+    position: relative;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+
+#playlist_button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+}
