--- a/_includes/katex_support.html
+++ b/_includes/katex_support.html
@@ -16,6 +16,8 @@
         macros: {
         "\\geqslant": "\\geq",
         "\\leqslant": "\\leq",
+        "\\and": "\\land",
+        "\\or": "\\lor",
         }
     });
     });
