--- a/project/XPlayer/css/search.css
+++ b/project/XPlayer/css/search.css
@@ -49,11 +49,12 @@
     position: fixed;
     left: 0;
     right: 0;
-    top: 30px;
+    top: 31px;
     z-index: 9999;
     background-color: #fff;
     color: #000;
     border-radius: 5px;
+    border: 2px solid #000;
 	
     -webkit-transition-duration: 0.8s; /* Safari */
     transition-duration: 0.8s;
