--- a/project/XPlayer/css/player.css
+++ b/project/XPlayer/css/player.css
@@ -182,20 +182,36 @@ a:hover {
 }
 /*the highlight color of the current lyric line*/
 .current-line-0 {
-    /* background:#fff -webkit-linear-gradient(left, #FAFA17, #FAFA17) no-repeat 0 0; */
-    /* -webkit-text-fill-color:transparent;
-    -webkit-background-clip:text; */
-    /* animation: lyric_sync_letter 2s linear; */
-    color: #FAFA17;
+    width: auto;
+    background:#fff -webkit-linear-gradient(left, #FAFA17, #FAFA17) no-repeat 0 0;
+    color: transparent;
+    text-shadow: none;
+    font-weight: bolder;
+    animation: lyric_sync_letter 2s linear;
 }
 .current-line-1 {
-    color: #ff1493;
+    width: auto;
+    background:#fff -webkit-linear-gradient(left, #ff1493, #ff1493) no-repeat 0 0;
+    color: transparent;
+    text-shadow: none;
+    font-weight: bolder;
+    animation: lyric_sync_letter 2s linear;
 }
 .current-line-2 {
-    color: #adff2f;
+    width: auto;
+    background:#fff -webkit-linear-gradient(left, #adff2f, #adff2f) no-repeat 0 0;
+    color: transparent;
+    text-shadow: none;
+    font-weight: bolder;
+    animation: lyric_sync_letter 2s linear;
 }
 .current-line-3 {
-    color: #d731f8;
+    width: auto;
+    background:#fff -webkit-linear-gradient(left, #d731f8, #d731f8) no-repeat 0 0;
+    color: transparent;
+    text-shadow: none;
+    font-weight: bolder;
+    animation: lyric_sync_letter 2s linear;
 }
 .current-song-played, .current-song-played a {
     color: #1493dd;
