switch KaTeX to cdn

--- a/_includes/katex_support.html
+++ b/_includes/katex_support.html
@@ -1,10 +1,10 @@
- <link rel="stylesheet" href="/katex/katex.min.css" crossorigin="anonymous">
-
+ <link rel="stylesheet" href="https://s4.zstatic.net/npm/katex/dist/katex.min.css" crossorigin="anonymous">
+    
     <!-- The loading of KaTeX is deferred to speed up page rendering -->
-    <script defer src="/katex/katex.min.js" crossorigin="anonymous"></script>
+    <script defer src="https://s4.zstatic.net/npm/katex/dist/katex.min.js" crossorigin="anonymous"></script>
 
     <!-- To automatically render math in text elements, include the auto-render extension: -->
-    <script defer src="/katex/contrib/auto-render.min.js" crossorigin="anonymous"
+    <script defer src="https://s4.zstatic.net/npm/katex/dist/contrib/auto-render.min.js" crossorigin="anonymous"
         onload="renderMathInElement(document.body);"></script> 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
