--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -836,17 +836,19 @@ samp {
 .post-container h4 {
   font-size: 22px;
   font-weight: 600;
-  color: gray;
 }
 .post-container h4 + p {
   margin-top: 10px;
 }
-.post-container h5,
-.post-container h6 {
+.post-container h5 {
   font-size: 20px;
   font-weight: 600;
-  color: gray;
 }
+.post-container h6 {
+  font-size: 18px;
+  font-weight: 600;
+}
+
 .post-container h5 + p,
 .post-container h6 + p {
   margin-top: 10px;
