--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -1,3 +1,543 @@
+article details p {
+  margin-top: 0.6rem;
+  margin-bottom: 0.3rem;
+}
+
+@media (prefers-reduced-motion) {
+  *,:after,:before {
+      transition: none!important
+  }
+}
+
+html {
+  font-size: 125%;
+  height: 100%;
+  overflow-x: hidden
+}
+
+body {
+  font-size: .5rem;
+  min-height: 100%;
+  position: relative;
+  width: 100%
+}
+
+
+:root {
+  --md-admonition-icon--note: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m3.1 5.07c.14 0 .28.05.4.16l1.27 1.27c.23.22.23.57 0 .78l-1 1-2.05-2.05 1-1c.1-.11.24-.16.38-.16m-1.97 1.74 2.06 2.06-6.06 6.06H7.07v-2.06z"/></svg>');
+  --md-admonition-icon--abstract: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17 9H7V7h10m0 6H7v-2h10m-3 6H7v-2h7M12 3a1 1 0 0 1 1 1 1 1 0 0 1-1 1 1 1 0 0 1-1-1 1 1 0 0 1 1-1m7 0h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2"/></svg>');
+  --md-admonition-icon--info: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13 9h-2V7h2m0 10h-2v-6h2m-1-9A10 10 0 0 0 2 12a10 10 0 0 0 10 10 10 10 0 0 0 10-10A10 10 0 0 0 12 2"/></svg>');
+  --md-admonition-icon--tip: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17.66 11.2c-.23-.3-.51-.56-.77-.82-.67-.6-1.43-1.03-2.07-1.66C13.33 7.26 13 4.85 13.95 3c-.95.23-1.78.75-2.49 1.32-2.59 2.08-3.61 5.75-2.39 8.9.04.1.08.2.08.33 0 .22-.15.42-.35.5-.23.1-.47.04-.66-.12a.6.6 0 0 1-.14-.17c-1.13-1.43-1.31-3.48-.55-5.12C5.78 10 4.87 12.3 5 14.47c.06.5.12 1 .29 1.5.14.6.41 1.2.71 1.73 1.08 1.73 2.95 2.97 4.96 3.22 2.14.27 4.43-.12 6.07-1.6 1.83-1.66 2.47-4.32 1.53-6.6l-.13-.26c-.21-.46-.77-1.26-.77-1.26m-3.16 6.3c-.28.24-.74.5-1.1.6-1.12.4-2.24-.16-2.9-.82 1.19-.28 1.9-1.16 2.11-2.05.17-.8-.15-1.46-.28-2.23-.12-.74-.1-1.37.17-2.06.19.38.39.76.63 1.06.77 1 1.98 1.44 2.24 2.8.04.14.06.28.06.43.03.82-.33 1.72-.93 2.27"/></svg>');
+  --md-admonition-icon--success: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59z"/></svg>');
+  --md-admonition-icon--question: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m15.07 11.25-.9.92C13.45 12.89 13 13.5 13 15h-2v-.5c0-1.11.45-2.11 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41a2 2 0 0 0-2-2 2 2 0 0 0-2 2H8a4 4 0 0 1 4-4 4 4 0 0 1 4 4 3.2 3.2 0 0 1-.93 2.25M13 19h-2v-2h2M12 2A10 10 0 0 0 2 12a10 10 0 0 0 10 10 10 10 0 0 0 10-10c0-5.53-4.5-10-10-10"/></svg>');
+  --md-admonition-icon--warning: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13 14h-2V9h2m0 9h-2v-2h2M1 21h22L12 2z"/></svg>');
+  --md-admonition-icon--failure: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>');
+  --md-admonition-icon--danger: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m11.5 20 4.86-9.73H13V4l-5 9.73h3.5zM12 2c2.75 0 5.1 1 7.05 2.95S22 9.25 22 12s-1 5.1-2.95 7.05S14.75 22 12 22s-5.1-1-7.05-2.95S2 14.75 2 12s1-5.1 2.95-7.05S9.25 2 12 2"/></svg>');
+  --md-admonition-icon--bug: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11 13h2v1h-2zm10-8v6c0 5.5-3.8 10.7-9 12-5.2-1.3-9-6.5-9-12V5l9-4zm-4 5h-2.2c-.2-.6-.6-1.1-1.1-1.5l1.2-1.2-.7-.7L12.8 8H12c-.2 0-.5 0-.7.1L9.9 6.6l-.8.8 1.2 1.2c-.5.3-.9.8-1.1 1.4H7v1h2v1H7v1h2v1H7v1h2.2c.4 1.2 1.5 2 2.8 2s2.4-.8 2.8-2H17v-1h-2v-1h2v-1h-2v-1h2zm-6 2h2v-1h-2z"/></svg>');
+  --md-admonition-icon--example: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2v2h1v14a4 4 0 0 0 4 4 4 4 0 0 0 4-4V4h1V2zm4 14c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1m2-4c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1m1-5h-4V4h4z"/></svg>');
+  --md-admonition-icon--quote: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14 17h3l2-4V7h-6v6h3M6 17h3l2-4V7H5v6h3z"/></svg>')
+}
+
+article .admonition,article details {
+  background-color: var(--md-admonition-bg-color);
+  border: .075rem solid #448aff;
+  border-radius: .2rem;
+  box-shadow: var(--md-shadow-z1);
+  color: var(--md-admonition-fg-color);
+  display: flow-root;
+  font-size: .64rem;
+  margin: 1.5625em 0;
+  padding: 0 .6rem;
+  page-break-inside: avoid;
+  transition: box-shadow 125ms
+}
+
+@media print {
+  article .admonition,article details {
+      box-shadow: none
+  }
+}
+
+article .admonition:focus-within,article details:focus-within {
+  box-shadow: 0 0 0 .2rem #448aff1a
+}
+
+article .admonition>*,article details>* {
+  box-sizing: border-box
+}
+
+article .admonition .admonition,article .admonition details,article details .admonition,article details details {
+  margin-bottom: 1em;
+  margin-top: 1em
+}
+
+article .admonition article__scrollwrap,article details article__scrollwrap {
+  margin: 1em -.6rem
+}
+
+article .admonition article__table,article details article__table {
+  padding: 0 .6rem
+}
+
+article .admonition>.tabbed-set:only-child,article details>.tabbed-set:only-child {
+  margin-top: 0
+}
+
+html article .admonition>:last-of-type,html article details>:last-of-type {
+  margin-bottom: .6rem
+}
+
+[dir=ltr] article .admonition-title,[dir=ltr] article summary {
+  padding-left: 2rem;
+  padding-right: .6rem
+}
+
+[dir=rtl] article .admonition-title,[dir=rtl] article summary {
+  padding-left: .6rem;
+  padding-right: 2rem
+}
+
+[dir=ltr] article .admonition-title,[dir=ltr] article summary {
+  border-left-width: .2rem
+}
+
+[dir=rtl] article .admonition-title,[dir=rtl] article summary {
+  border-right-width: .2rem
+}
+
+[dir=ltr] article .admonition-title,[dir=ltr] article summary {
+  border-top-left-radius: .1rem
+}
+
+[dir=ltr] article .admonition-title,[dir=ltr] article summary,[dir=rtl] article .admonition-title,[dir=rtl] article summary {
+  border-top-right-radius: .1rem
+}
+
+[dir=rtl] article .admonition-title,[dir=rtl] article summary {
+  border-top-left-radius: .1rem
+}
+
+article .admonition-title,article summary {
+  background-color: #448aff1a;
+  border: none;
+  font-weight: 700;
+  margin: 0 -.6rem;
+  padding-bottom: .4rem;
+  padding-top: .4rem;
+  position: relative
+}
+
+html article .admonition-title:last-of-type,html article summary:last-of-type {
+  margin-bottom: 0
+}
+
+[dir=ltr] article .admonition-title:before,[dir=ltr] article summary:before {
+  left: .6rem
+}
+
+[dir=rtl] article .admonition-title:before,[dir=rtl] article summary:before {
+  right: .6rem
+}
+
+article .admonition-title:before,article summary:before {
+  background-color: #448aff;
+  content: "";
+  height: 1rem;
+  -webkit-mask-image: var(--md-admonition-icon--note);
+  mask-image: var(--md-admonition-icon--note);
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  position: absolute;
+  top: .625em;
+  width: 1rem;
+  left: .6rem;
+}
+
+article summary {
+  text-indent: 2rem;
+}
+
+article .admonition-title code,article summary code {
+  box-shadow: 0 0 0 .05rem var(--md-default-fg-color--lightest)
+}
+
+article .admonition.note,article details.note {
+  border-color: #448aff
+}
+
+article .admonition.note:focus-within,article details.note:focus-within {
+  box-shadow: 0 0 0 .2rem #448aff1a
+}
+
+article .note>.admonition-title,article .note>summary {
+  background-color: #448aff1a
+}
+
+article .note>.admonition-title:before,article .note>summary:before {
+  background-color: #448aff;
+  -webkit-mask-image: var(--md-admonition-icon--note);
+  mask-image: var(--md-admonition-icon--note)
+}
+
+article .note>.admonition-title:after,article .note>summary:after {
+  color: #448aff
+}
+
+article .admonition.abstract,article details.abstract {
+  border-color: #00b0ff
+}
+
+article .admonition.abstract:focus-within,article details.abstract:focus-within {
+  box-shadow: 0 0 0 .2rem #00b0ff1a
+}
+
+article .abstract>.admonition-title,article .abstract>summary {
+  background-color: #00b0ff1a
+}
+
+article .abstract>.admonition-title:before,article .abstract>summary:before {
+  background-color: #00b0ff;
+  -webkit-mask-image: var(--md-admonition-icon--abstract);
+  mask-image: var(--md-admonition-icon--abstract)
+}
+
+article .abstract>.admonition-title:after,article .abstract>summary:after {
+  color: #00b0ff
+}
+
+article .admonition.info,article details.info {
+  border-color: #00b8d4
+}
+
+article .admonition.info:focus-within,article details.info:focus-within {
+  box-shadow: 0 0 0 .2rem #00b8d41a
+}
+
+article .info>.admonition-title,article .info>summary {
+  background-color: #00b8d41a
+}
+
+article .info>.admonition-title:before,article .info>summary:before {
+  background-color: #00b8d4;
+  -webkit-mask-image: var(--md-admonition-icon--info);
+  mask-image: var(--md-admonition-icon--info)
+}
+
+article .info>.admonition-title:after,article .info>summary:after {
+  color: #00b8d4
+}
+
+article .admonition.tip,article details.tip {
+  border-color: #00bfa5
+}
+
+article .admonition.tip:focus-within,article details.tip:focus-within {
+  box-shadow: 0 0 0 .2rem #00bfa51a
+}
+
+article .tip>.admonition-title,article .tip>summary {
+  background-color: #00bfa51a
+}
+
+article .tip>.admonition-title:before,article .tip>summary:before {
+  background-color: #00bfa5;
+  -webkit-mask-image: var(--md-admonition-icon--tip);
+  mask-image: var(--md-admonition-icon--tip)
+}
+
+article .tip>.admonition-title:after,article .tip>summary:after {
+  color: #00bfa5
+}
+
+article .admonition.success,article details.success {
+  border-color: #00c853
+}
+
+article .admonition.success:focus-within,article details.success:focus-within {
+  box-shadow: 0 0 0 .2rem #00c8531a
+}
+
+article .success>.admonition-title,article .success>summary {
+  background-color: #00c8531a
+}
+
+article .success>.admonition-title:before,article .success>summary:before {
+  background-color: #00c853;
+  -webkit-mask-image: var(--md-admonition-icon--success);
+  mask-image: var(--md-admonition-icon--success)
+}
+
+article .success>.admonition-title:after,article .success>summary:after {
+  color: #00c853
+}
+
+article .admonition.question,article details.question {
+  border-color: #64dd17
+}
+
+article .admonition.question:focus-within,article details.question:focus-within {
+  box-shadow: 0 0 0 .2rem #64dd171a
+}
+
+article .question>.admonition-title,article .question>summary {
+  background-color: #64dd171a
+}
+
+article .question>.admonition-title:before,article .question>summary:before {
+  background-color: #64dd17;
+  -webkit-mask-image: var(--md-admonition-icon--question);
+  mask-image: var(--md-admonition-icon--question)
+}
+
+article .question>.admonition-title:after,article .question>summary:after {
+  color: #64dd17
+}
+
+article .admonition.warning,article details.warning {
+  border-color: #ff9100
+}
+
+article .admonition.warning:focus-within,article details.warning:focus-within {
+  box-shadow: 0 0 0 .2rem #ff91001a
+}
+
+article .warning>.admonition-title,article .warning>summary {
+  background-color: #ff91001a
+}
+
+article .warning>.admonition-title:before,article .warning>summary:before {
+  background-color: #ff9100;
+  -webkit-mask-image: var(--md-admonition-icon--warning);
+  mask-image: var(--md-admonition-icon--warning)
+}
+
+article .warning>.admonition-title:after,article .warning>summary:after {
+  color: #ff9100
+}
+
+article .admonition.failure,article details.failure {
+  border-color: #ff5252
+}
+
+article .admonition.failure:focus-within,article details.failure:focus-within {
+  box-shadow: 0 0 0 .2rem #ff52521a
+}
+
+article .failure>.admonition-title,article .failure>summary {
+  background-color: #ff52521a
+}
+
+article .failure>.admonition-title:before,article .failure>summary:before {
+  background-color: #ff5252;
+  -webkit-mask-image: var(--md-admonition-icon--failure);
+  mask-image: var(--md-admonition-icon--failure)
+}
+
+article .failure>.admonition-title:after,article .failure>summary:after {
+  color: #ff5252
+}
+
+article .admonition.danger,article details.danger {
+  border-color: #ff1744
+}
+
+article .admonition.danger:focus-within,article details.danger:focus-within {
+  box-shadow: 0 0 0 .2rem #ff17441a
+}
+
+article .danger>.admonition-title,article .danger>summary {
+  background-color: #ff17441a
+}
+
+article .danger>.admonition-title:before,article .danger>summary:before {
+  background-color: #ff1744;
+  -webkit-mask-image: var(--md-admonition-icon--danger);
+  mask-image: var(--md-admonition-icon--danger)
+}
+
+article .danger>.admonition-title:after,article .danger>summary:after {
+  color: #ff1744
+}
+
+article .admonition.bug,article details.bug {
+  border-color: #f50057
+}
+
+article .admonition.bug:focus-within,article details.bug:focus-within {
+  box-shadow: 0 0 0 .2rem #f500571a
+}
+
+article .bug>.admonition-title,article .bug>summary {
+  background-color: #f500571a
+}
+
+article .bug>.admonition-title:before,article .bug>summary:before {
+  background-color: #f50057;
+  -webkit-mask-image: var(--md-admonition-icon--bug);
+  mask-image: var(--md-admonition-icon--bug)
+}
+
+article .bug>.admonition-title:after,article .bug>summary:after {
+  color: #f50057
+}
+
+article .admonition.example,article details.example {
+  border-color: #7c4dff
+}
+
+article .admonition.example:focus-within,article details.example:focus-within {
+  box-shadow: 0 0 0 .2rem #7c4dff1a
+}
+
+article .example>.admonition-title,article .example>summary {
+  background-color: #7c4dff1a
+}
+
+article .example>.admonition-title:before,article .example>summary:before {
+  background-color: #7c4dff;
+  -webkit-mask-image: var(--md-admonition-icon--example);
+  mask-image: var(--md-admonition-icon--example)
+}
+
+article .example>.admonition-title:after,article .example>summary:after {
+  color: #7c4dff
+}
+
+article .admonition.quote,article details.quote {
+  border-color: #9e9e9e
+}
+
+article .admonition.quote:focus-within,article details.quote:focus-within {
+  box-shadow: 0 0 0 .2rem #9e9e9e1a
+}
+
+article .quote>.admonition-title,article .quote>summary {
+  background-color: #9e9e9e1a
+}
+
+article .quote>.admonition-title:before,article .quote>summary:before {
+  background-color: #9e9e9e;
+  -webkit-mask-image: var(--md-admonition-icon--quote);
+  mask-image: var(--md-admonition-icon--quote)
+}
+
+article .quote>.admonition-title:after,article .quote>summary:after {
+  color: #9e9e9e
+}
+
+:root {
+  --md-details-icon: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M8.59 16.58 13.17 12 8.59 7.41 10 6l6 6-6 6z"/></svg>')
+}
+
+article details {
+  display: flow-root;
+  overflow: visible;
+  padding-top: 0
+}
+
+article details[open]>summary:after {
+  transform: rotate(90deg)
+}
+
+article details:not([open]) {
+  box-shadow: none;
+  padding-bottom: 0
+}
+
+article details:not([open])>summary {
+  border-radius: .1rem
+}
+
+[dir=ltr] article summary {
+  padding-right: 1.8rem
+}
+
+[dir=rtl] article summary {
+  padding-left: 1.8rem
+}
+
+[dir=ltr] article summary {
+  border-top-left-radius: .1rem
+}
+
+[dir=ltr] article summary,[dir=rtl] article summary {
+  border-top-right-radius: .1rem
+}
+
+[dir=rtl] article summary {
+  border-top-left-radius: .1rem
+}
+
+article summary {
+  cursor: pointer;
+  display: block;
+  min-height: 1rem;
+  overflow: hidden
+}
+
+article summary.focus-visible {
+  outline-color: var(--md-accent-fg-color);
+  outline-offset: .2rem
+}
+
+article summary:not(.focus-visible) {
+  -webkit-tap-highlight-color: transparent;
+  outline: none
+}
+
+[dir=ltr] article summary:after {
+  right: .4rem
+}
+
+[dir=rtl] article summary:after {
+  left: .4rem
+}
+
+article summary:after {
+  background-color: currentcolor;
+  content: "";
+  height: 1rem;
+  -webkit-mask-image: var(--md-details-icon);
+  mask-image: var(--md-details-icon);
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  position: absolute;
+  top: .625em;
+  transform: rotate(0deg);
+  transition: transform .25s;
+  width: 1rem
+}
+
+[dir=rtl] article summary:after {
+  transform: rotate(180deg)
+}
+
+article summary::marker {
+  display: none
+}
+
+article summary::-webkit-details-marker {
+  display: none
+}
+
+/* 
+There're brrowed from OI Wiki(https://github.com/OI-wiki/OI-wiki/).
+If you want to know why I(TH911) do this,please read https://th911.github.io/2024/12/28/1/.
+They're mainly about <details>.
+----------------------------------------------------------
+DIVIDING LINE
+----------------------------------------------------------
+There're from hux blog.
+*/
+
 @media (min-width: 1200px) {
   .post-container,
   .sidebar-container {
@@ -656,6 +1196,7 @@ pre.highlight {
   }
 }
 .search-page #search-results {
+  font-size: 20px;
   overflow: auto;
   height: 100%;
   -webkit-overflow-scrolling: touch;
