--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,6 +39,8 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+    <link rel="icon" href="{{ site.baseurl }}/img/favicon.ico">
+    
 
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
