--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,7 +76,7 @@ layout: default
 				{{ content }}
 
                 <hr style="visibility: hidden;">
-                <ul class="pager">
+                <ul id="menuPrevNext" class="pager">
                     {% if page.previous.url %}
                     <li class="previous">
                         <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">
