--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -108,7 +108,7 @@
 
 <!--fastClick.js -->
 <script>
-    async("//s4.zstatic.net/ajax/libs/fastclick/1.0.6/fastclick.min.js", function () {
+    async("//cdn.bootcdn.net/ajax/libs/fastclick/1.0.6/fastclick.min.js", function () {
         var $nav = document.querySelector("nav");
         if ($nav) FastClick.attach($nav);
     })
