--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -83,7 +83,9 @@
     <a target="_blank" href="https://www.luogu.com.cn/user/{{ site.luogu_userid }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa  fa-stack-1x fa-inverse">洛</i>
+        <i class="fa  fa-stack-1x fa-inverse">洛
+          <!-- <img style="height: 10px;width: auto;" src="/img/logo-single.png"> -->
+        </i>
       </span>
     </a>
   </li>
