--- a/_includes/katex_support.html
+++ b/_includes/katex_support.html
@@ -3,6 +3,8 @@
     <!-- The loading of KaTeX is deferred to speed up page rendering -->
     <script defer src="https://fastly.jsdelivr.net/npm/katex/dist/katex.min.js" crossorigin="anonymous"></script>
 
+    <script defer src="https://fastly.jsdelivr.net/npm/katex/dist/contrib/copy-tex.min.js" crossorigin="anonymous"></script>
+
     <!-- To automatically render math in text elements, include the auto-render extension: -->
     <script defer src="https://fastly.jsdelivr.net/npm/katex/dist/contrib/auto-render.min.js" crossorigin="anonymous"
         onload="renderMathInElement(document.body);"></script>
